--- a/JogoDesafio/public/index.html
+++ b/JogoDesafio/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
@@ -14,5 +15,15 @@
 </head>
 
 <body>
+	<main id="main-container">
+		<section id="image">
+
+		</section>
+
+		<section id="soccer-game">
+
+		</section>
+	</main>
 </body>
+
 </html>
