--- a/JogoDesafio/public/index.html
+++ b/JogoDesafio/public/index.html
@@ -11,17 +11,17 @@
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 	<script defer src='/build/bundle.js'></script>
 </head>
 
 <body>
-	<main id="main-container">
+	<main>
 		<section id="image">
-
-		</section>
-
-		<section id="soccer-game">
-
+			<img src="./images/goal.svg" />
 		</section>
 	</main>
 </body>
